# facecrop.rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build-and-test.yml  release.yml
src/: cropping.rs  main.rs  post_processing.rs
