[package]
name = "facecrop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
image = "0.24.7"
rust-faces = { version = "1.0.0", features = ["viz"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
